@@ -1,16 +1,16 @@
 Package: contrast
-Version: 0.18
-Date: 2013-05-24
+Version: 0.19
+Date: 2013-11-15
 Title: A collection of contrast methods
-Author: Max Kuhn, contributions from Steve Weston, Jed Wing and James
-        Forester
+Author: Max Kuhn, contributions from Steve Weston, Jed Wing, 
+  James Forester and Thorn Thaler 
 Maintainer: Max Kuhn <max.kuhn@pfizer.com>
 Depends: R (>= 2.2.1), rms
 Suggests: lattice, nlme, Hmisc, geepack, MASS, sandwich
-Description: Contrast methods, in the style of the Design package, for
-        fit objects produced by the lm, glm, gls, and geese functions.
+Description: Contrast methods, in the style of the Design package,
+  for fit objects produced by the lm, glm, gls, and geese functions.
 License: GPL-2
-Packaged: 2013-05-24 18:29:25 UTC; kuhna03
+Packaged: 2013-11-16 02:27:57 UTC; kuhna03
 NeedsCompilation: no
 Repository: CRAN
-Date/Publication: 2013-05-24 20:50:14
+Date/Publication: 2013-11-16 06:37:04
